# nix-qt-bar

./: CMakeLists.txt  default.nix  lib.cpp  qtbar.nix  shell.nix
include/QtBar/: QtBar.h
